# rust-studies

./: .gitignore  DOCUMENTACAO.md  README.md  repo_concat_all.md
.cursor/plans/: api_rust_ods_choperia_42e63f58.plan.md
chopebrain-ods-api/: Cargo.toml  README.md
chopebrain-ods-api/src/: auth.rs  config.rs  db.rs  handlers.rs  lib.rs  main.rs  mtls.rs
scripts/: test-api.ps1
