[package]
name = "chopebrain-ods-api"
version = "0.1.0"
edition = "2021"
description = "API Rust ODS Choperia - JWT, mTLS, endpoints hambúrgueres"

[[bin]]
name = "chopebrain-ods-api"
path = "src/main.rs"

[[bin]]
name = "gen-certs"
path = "src/bin/gen_certs.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
futures-util = "0.3"
rcgen = "0.12"
time = "0.3"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
